examples/test/testpolicy12891.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12891
  namespace: namespace165
spec:
  podSelector:
    matchLabels:
      key42: value42
      key32: value15
      key48: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value47
          key1: value18
          key24: value12
